@@ -4,7 +4,7 @@
 /* This string is written to the output primary header as CAL_VER. */
 
 
-# define WF3_CAL_VER "3.7.1 (Oct-18-2023)"
-# define WF3_CAL_VER_NUM "3.7.1"
+# define WF3_CAL_VER "3.7.2 (Apr-15-2024)"
+# define WF3_CAL_VER_NUM "3.7.2"
 
 #endif /* INCL_WF3VERSION_H */
